stop scrolling when menu is visible.

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -263,6 +263,10 @@ p {}
 }
 
 @media (min-width: $size-md) {
+  html {
+    overflow: auto !important;
+  }
+
   .first-section {
     padding-top: 14rem;
   }
